pod-security/baseline/restrict-sysctls/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  securityContext:
    sysctls:
    - name: kernel.shm_rmid_forced
      value: "0"
    - name: net.ipv4.foo_bar
      value: "5000-6000"
    - name: net.ipv4.ip_unprivileged_port_start
      value: "60000"
  containers:
  - name: busybox01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  securityContext:
    sysctls:
    - name: net.core.somaxconn
      value: "1000-2000"
  containers:
  - name: busybox01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  securityContext:
    sysctls:
    - name: net.ipv4.foo_bar
      value: "5000-6000"
    - name: kernel.shm_rmid_forced
      value: "0"
  containers:
  - name: busybox01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  securityContext:
    sysctls:
    - name: kernel.shm_rmid_forced
      value: "0"
    - name: net.ipv4.foo_bar
      value: "5000-6000"
  containers:
  - name: busybox01
    image: busybox:1.35
