pod-security/baseline/restrict-sysctls/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  securityContext:
    sysctls:
    - name: kernel.shm_rmid_forced
      value: "0"
    - name: net.ipv4.ip_local_port_range
      value: "5000-6000"
    - name: net.ipv4.ip_unprivileged_port_start
      value: "60000"
  containers:
  - name: busybox01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  securityContext:
    sysctls:
    - name: net.ipv4.ping_group_range
      value: "1000-2000"
  containers:
  - name: busybox01
    image: busybox:1.35
