pod-security/baseline/restrict-sysctls/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      securityContext:
        sysctls:
        - name: kernel.shm_rmid_forced
          value: "0"
        - name: net.ipv4.ip_local_port_range
          value: "5000-6000"
        - name: net.ipv4.ip_unprivileged_port_start
          value: "60000"
      containers:
      - name: busybox01
        image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: Never
          securityContext:
            sysctls:
            - name: kernel.shm_rmid_forced
              value: "0"
            - name: net.ipv4.ip_local_port_range
              value: "5000-6000"
            - name: net.ipv4.ip_unprivileged_port_start
              value: "60000"
          containers:
          - name: busybox01
            image: busybox:1.35
