pod-security/baseline/restrict-sysctls/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-sysctls
status:
  ready: true
